project(leveldb)
cmake_minimum_required(VERSION 2.8)

list(APPEND SOURCES db/builder.cc)
list(APPEND SOURCES db/c.cc)
list(APPEND SOURCES db/db_impl.cc)
list(APPEND SOURCES db/db_iter.cc)
list(APPEND SOURCES db/dbformat.cc)
list(APPEND SOURCES db/filename.cc)
list(APPEND SOURCES db/log_reader.cc)
list(APPEND SOURCES db/log_writer.cc)
list(APPEND SOURCES db/memtable.cc)
list(APPEND SOURCES db/repair.cc)
list(APPEND SOURCES db/table_cache.cc)
list(APPEND SOURCES db/version_edit.cc)
list(APPEND SOURCES db/version_set.cc)
list(APPEND SOURCES db/write_batch.cc)
list(APPEND SOURCES table/block.cc)
list(APPEND SOURCES table/block_builder.cc)
list(APPEND SOURCES table/filter_block.cc)
list(APPEND SOURCES table/format.cc)
list(APPEND SOURCES table/iterator.cc)
list(APPEND SOURCES table/merger.cc)
list(APPEND SOURCES table/table.cc)
list(APPEND SOURCES table/table_builder.cc)
list(APPEND SOURCES table/two_level_iterator.cc)
list(APPEND SOURCES util/arena.cc)
list(APPEND SOURCES util/bloom.cc)
list(APPEND SOURCES util/cache.cc)
list(APPEND SOURCES util/coding.cc)
list(APPEND SOURCES util/comparator.cc)
list(APPEND SOURCES util/crc32c.cc)
list(APPEND SOURCES util/env.cc)
list(APPEND SOURCES util/filter_policy.cc)
list(APPEND SOURCES util/hash.cc)
list(APPEND SOURCES util/histogram.cc)
list(APPEND SOURCES util/logging.cc)
list(APPEND SOURCES util/options.cc)
list(APPEND SOURCES util/status.cc)

include_directories(. include)

if (UNIX)
	list(APPEND SOURCES port/port_posix.cc)
	list(APPEND SOURCES util/env_posix.cc)

	add_definitions(-DLEVELDB_PLATFORM_POSIX)
endif()

if (APPLE)
	add_definitions(-DOS_MACOSX)
endif()

if (WIN32)
	list(APPEND SOURCES port/port_win.cc)
	list(APPEND SOURCES util/env_win.cc)
	list(APPEND SOURCES util/env_win_detail/win_misc.cc)
	list(APPEND SOURCES util/env_win_detail/win_mmap.cc)
	list(APPEND SOURCES util/env_win_detail/win_thread.cc)
	list(APPEND SOURCES util/env_win_detail/win_time.cc)
	list(APPEND SOURCES util/env_win_detail/winapi.cc)

	add_definitions(-DLEVELDB_PLATFORM_WINDOWS)
endif()

add_library(leveldb ${SOURCES})
